# django-vue-template

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py
backend/scripts/: wait-for.sh
