[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["orekentaro <kntru0218gj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
debugpy = "^1.8.13"
ruff = "^0.11.0"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
boto3 = "^1.37.16"
drf-jwt = "^1.19.2"
django-axes = "^7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
